refactor: code folder structure
